--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,12 +2,7 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <display-name>CRUD-Application</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
+    <welcome-file>/login/login.jsp</welcome-file>
   </welcome-file-list>
   
  <servlet>
@@ -17,5 +12,14 @@
   <servlet-mapping>
   	<servlet-name>hello</servlet-name>
   	<url-pattern>/hello-world</url-pattern>
+  </servlet-mapping> 
+  
+  <servlet>
+  	<servlet-name>user</servlet-name>
+  	<servlet-class>com.crud.user.Manager</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>user</servlet-name>
+  	<url-pattern>/user</url-pattern>
   </servlet-mapping> 
 </web-app>
