--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,5 +21,23 @@
   <servlet-mapping>
   	<servlet-name>user</servlet-name>
   	<url-pattern>/user</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+  	<servlet-name>login</servlet-name>
+  	<servlet-class>com.crud.login.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>login</servlet-name>
+  	<url-pattern>/login-servlet</url-pattern>
+  </servlet-mapping> 
+  
+  <servlet>
+  	<servlet-name>logout</servlet-name>
+  	<servlet-class>com.crud.login.LogoutServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>logout</servlet-name>
+  	<url-pattern>/logout-servlet</url-pattern>
   </servlet-mapping> 
 </web-app>
